@@ -2,13 +2,16 @@ package Whelk::Schema::Definition::_Scalar;
 
 use Whelk::StrictBase 'Whelk::Schema::Definition';
 
-attr '?required' => sub { !defined $_[0]->default };
-attr '?default' => undef;
+use constant NO_DEFAULT => \undef;
+
+attr '?required' => sub { !$_[0]->has_default };
+attr '?default' => sub { NO_DEFAULT };
 attr '?example' => undef;
 
 sub has_default
 {
-	return defined $_[0]->default;
+	my $default = $_[0]->default;
+	return !ref $default || $default != NO_DEFAULT;
 }
 
 sub _inhale
@@ -20,8 +23,13 @@ sub _inhale
 sub inhale
 {
 	my ($self, $value) = @_;
+	if (!defined $value && $self->has_default) {
+		$value = $self->default;
+	}
 
-	return $self->_inhale($value // $self->default);
+	return undef if $self->_valid_nullable($value);
+
+	return $self->_inhale($value);
 }
 
 sub _exhale
@@ -32,8 +40,13 @@ sub _exhale
 sub exhale
 {
 	my ($self, $value) = @_;
+	if (!defined $value && $self->has_default) {
+		$value = $self->default;
+	}
 
-	return $self->_exhale($value // $self->default);
+	return undef if $self->_valid_nullable($value);
+
+	return $self->_exhale($value);
 }
 
 1;
